# chatGPT_Client

./: .env  .gitignore  README.md  cli_app  config.toml  memory  pyproject.toml  run.py  test.py
CLI/: app.py  utils.py
chatGPT/: bot.py  chatDialog.ui  response.py  utils.py
