[tool.poetry]
name = "chatgpt-client"
version = "0.1.0"
description = "A chatGPT client application for desktop."
authors = ["Amulya Paritosh <amulya1171@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AmulyaParitosh/chatGPT_Client"
repository = "https://github.com/AmulyaParitosh/chatGPT_Client"
packages = [{include = "chatgpt_client"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
toml = "^0.10.2"
sty = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
